--- a/Coronavirus/Base.lproj/Main.storyboard
+++ b/Coronavirus/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1vV-zE-4FP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Led-8q-9ke">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -10,13 +10,14 @@
         <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="Coronavirus" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" pitchEnabled="NO" showsBuildings="NO" showsCompass="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpf-dB-WdI">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -28,32 +29,125 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="TMf-a5-jPs"/>
                     <navigationItem key="navigationItem" id="l0u-66-eJ8"/>
                     <connections>
                         <outlet property="map" destination="Zpf-dB-WdI" id="M6N-YN-GxF"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2100" y="-378"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="psl-To-Kbl">
+            <objects>
+                <viewController id="1mm-eh-fSy" customClass="TableViewController" customModule="Coronavirus" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EIm-ze-oic">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mZR-dG-pyo">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellId" id="ESK-LU-qcn">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="70.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ESK-LU-qcn" id="LzX-6s-OM2">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="70.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sg0-TC-iSo">
+                                                    <rect key="frame" x="28" y="35" width="0.0" height="0.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Sg0-TC-iSo" firstAttribute="top" secondItem="LzX-6s-OM2" secondAttribute="topMargin" constant="24" id="ZIo-lq-Du5"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Sg0-TC-iSo" secondAttribute="bottom" constant="24" id="nLB-tV-ZYi"/>
+                                                <constraint firstItem="Sg0-TC-iSo" firstAttribute="leading" secondItem="LzX-6s-OM2" secondAttribute="leadingMargin" constant="8" id="oQK-JT-RwV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="1mm-eh-fSy" id="MJM-BY-IoV"/>
+                                    <outlet property="delegate" destination="1mm-eh-fSy" id="GJy-9X-3EU"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="mZR-dG-pyo" firstAttribute="bottom" secondItem="YvD-Nx-YU9" secondAttribute="bottom" id="7dq-3P-xZa"/>
+                            <constraint firstItem="mZR-dG-pyo" firstAttribute="leading" secondItem="YvD-Nx-YU9" secondAttribute="leading" id="GCZ-RG-Q5F"/>
+                            <constraint firstItem="mZR-dG-pyo" firstAttribute="trailing" secondItem="YvD-Nx-YU9" secondAttribute="trailing" id="KZ5-m7-MQn"/>
+                            <constraint firstItem="mZR-dG-pyo" firstAttribute="top" secondItem="YvD-Nx-YU9" secondAttribute="top" id="f0N-gc-kCA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="YvD-Nx-YU9"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fYA-Eb-Esk"/>
+                    <connections>
+                        <outlet property="table" destination="mZR-dG-pyo" id="DgQ-sA-Wi2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NC3-n9-L2r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3010.144927536232" y="377.67857142857139"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="H2Y-lx-u3z">
+            <objects>
+                <viewController id="119-3u-A14" customClass="DetailViewController" customModule="Coronavirus" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5Ed-B6-Li9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="o5r-wQ-a5q"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TGr-jg-vTL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3821" y="374"/>
+        </scene>
+        <!--Tab Bar View Controller-->
+        <scene sceneID="EmB-2j-p58">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Led-8q-9ke" customClass="TabBarViewController" customModule="Coronavirus" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="XG9-Jf-AEs"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ugd-vJ-sNI">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="cpa-oy-0zd"/>
+                        <segue destination="iuc-LR-pFk" kind="relationship" relationship="viewControllers" id="lKG-CT-UUk"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mxL-K5-zS6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="eR2-kb-d6L">
+        <scene sceneID="jQW-Su-k3Z">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1vV-zE-4FP" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iuc-LR-pFk" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="more" id="wTf-jM-fps"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hOl-d4-Vto">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="reg-xf-Zcj">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="6jE-dI-BZi"/>
+                        <segue destination="1mm-eh-fSy" kind="relationship" relationship="rootViewController" id="9F4-ZM-rwb"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3Bk-A1-qtp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BZY-w3-nRD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="2100" y="377.67857142857139"/>
         </scene>
     </scenes>
 </document>
