--- a/Coronavirus/Base.lproj/Main.storyboard
+++ b/Coronavirus/Base.lproj/Main.storyboard
@@ -7,17 +7,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main View Controller-->
+        <!--Confirmed cases-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="Coronavirus" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WorldSpreadController" customModule="Coronavirus" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" pitchEnabled="NO" showsBuildings="NO" showsCompass="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpf-dB-WdI">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -29,19 +28,19 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="TMf-a5-jPs"/>
-                    <navigationItem key="navigationItem" id="l0u-66-eJ8"/>
+                    <navigationItem key="navigationItem" title="Confirmed cases" id="l0u-66-eJ8"/>
                     <connections>
                         <outlet property="map" destination="Zpf-dB-WdI" id="M6N-YN-GxF"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2100" y="-378"/>
+            <point key="canvasLocation" x="3010.144927536232" y="-378.34821428571428"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Confirmed cases-->
         <scene sceneID="psl-To-Kbl">
             <objects>
-                <viewController id="1mm-eh-fSy" customClass="TableViewController" customModule="Coronavirus" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="1mm-eh-fSy" customClass="ListController" customModule="Coronavirus" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EIm-ze-oic">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -50,26 +49,40 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellId" id="ESK-LU-qcn">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="70.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellId" rowHeight="80" id="ESK-LU-qcn" customClass="DailyReport" customModule="Coronavirus" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ESK-LU-qcn" id="LzX-6s-OM2">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="70.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sg0-TC-iSo">
-                                                    <rect key="frame" x="28" y="35" width="0.0" height="0.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Naples" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="2" translatesAutoresizingMaskIntoConstraints="NO" id="Sg0-TC-iSo">
+                                                    <rect key="frame" x="16" y="16" width="378" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                     <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eta-ai-21G">
+                                                    <rect key="frame" x="16" y="50.5" width="42" height="13.5"/>
+                                                    <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
+                                                    <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Sg0-TC-iSo" firstAttribute="top" secondItem="LzX-6s-OM2" secondAttribute="topMargin" constant="24" id="ZIo-lq-Du5"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Sg0-TC-iSo" secondAttribute="bottom" constant="24" id="nLB-tV-ZYi"/>
-                                                <constraint firstItem="Sg0-TC-iSo" firstAttribute="leading" secondItem="LzX-6s-OM2" secondAttribute="leadingMargin" constant="8" id="oQK-JT-RwV"/>
+                                                <constraint firstItem="Sg0-TC-iSo" firstAttribute="top" secondItem="LzX-6s-OM2" secondAttribute="top" constant="16" id="C3Q-gd-T01"/>
+                                                <constraint firstAttribute="bottom" secondItem="eta-ai-21G" secondAttribute="bottom" constant="16" id="Qjd-MF-92w"/>
+                                                <constraint firstItem="eta-ai-21G" firstAttribute="leading" secondItem="LzX-6s-OM2" secondAttribute="leading" constant="16" id="cFg-BA-7sd"/>
+                                                <constraint firstAttribute="trailing" secondItem="Sg0-TC-iSo" secondAttribute="trailing" constant="20" symbolic="YES" id="fMq-iV-vBe"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="eta-ai-21G" secondAttribute="trailing" constant="20" symbolic="YES" id="kRP-4Q-2KS"/>
+                                                <constraint firstItem="Sg0-TC-iSo" firstAttribute="leading" secondItem="LzX-6s-OM2" secondAttribute="leading" constant="16" id="rqL-PO-X1w"/>
+                                                <constraint firstItem="eta-ai-21G" firstAttribute="top" secondItem="Sg0-TC-iSo" secondAttribute="bottom" constant="8" id="uXo-WN-Ca6"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="confirmed" destination="eta-ai-21G" id="18M-R9-mfm"/>
+                                            <outlet property="country" destination="Sg0-TC-iSo" id="uCQ-QR-lIb"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -80,21 +93,21 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="mZR-dG-pyo" firstAttribute="bottom" secondItem="YvD-Nx-YU9" secondAttribute="bottom" id="7dq-3P-xZa"/>
-                            <constraint firstItem="mZR-dG-pyo" firstAttribute="leading" secondItem="YvD-Nx-YU9" secondAttribute="leading" id="GCZ-RG-Q5F"/>
-                            <constraint firstItem="mZR-dG-pyo" firstAttribute="trailing" secondItem="YvD-Nx-YU9" secondAttribute="trailing" id="KZ5-m7-MQn"/>
-                            <constraint firstItem="mZR-dG-pyo" firstAttribute="top" secondItem="YvD-Nx-YU9" secondAttribute="top" id="f0N-gc-kCA"/>
+                            <constraint firstItem="mZR-dG-pyo" firstAttribute="bottom" secondItem="YvD-Nx-YU9" secondAttribute="bottom" id="NYg-bo-3gy"/>
+                            <constraint firstItem="mZR-dG-pyo" firstAttribute="top" secondItem="YvD-Nx-YU9" secondAttribute="top" id="YDr-7f-94P"/>
+                            <constraint firstItem="mZR-dG-pyo" firstAttribute="leading" secondItem="YvD-Nx-YU9" secondAttribute="leading" id="bbF-kQ-ugm"/>
+                            <constraint firstItem="mZR-dG-pyo" firstAttribute="trailing" secondItem="YvD-Nx-YU9" secondAttribute="trailing" id="urA-eC-Cj6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YvD-Nx-YU9"/>
                     </view>
-                    <navigationItem key="navigationItem" id="fYA-Eb-Esk"/>
+                    <navigationItem key="navigationItem" title="Confirmed cases" id="o1z-9r-q9p"/>
                     <connections>
                         <outlet property="table" destination="mZR-dG-pyo" id="DgQ-sA-Wi2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NC3-n9-L2r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3010.144927536232" y="377.67857142857139"/>
+            <point key="canvasLocation" x="3010.144927536232" y="373.66071428571428"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="H2Y-lx-u3z">
@@ -109,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TGr-jg-vTL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3821" y="374"/>
+            <point key="canvasLocation" x="4730.434782608696" y="373.66071428571428"/>
         </scene>
         <!--Tab Bar View Controller-->
         <scene sceneID="EmB-2j-p58">
@@ -118,36 +131,56 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="XG9-Jf-AEs"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ugd-vJ-sNI">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="cpa-oy-0zd"/>
-                        <segue destination="iuc-LR-pFk" kind="relationship" relationship="viewControllers" id="lKG-CT-UUk"/>
+                        <segue destination="CeH-5e-u7Z" kind="relationship" relationship="viewControllers" id="cpa-oy-0zd"/>
+                        <segue destination="7Ig-KS-q36" kind="relationship" relationship="viewControllers" id="7cH-vV-jmS"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mxL-K5-zS6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="jQW-Su-k3Z">
+        <!--Item-->
+        <scene sceneID="Vkx-le-44K">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iuc-LR-pFk" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="more" id="wTf-jM-fps"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7Ig-KS-q36" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Ohb-eH-Qek"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="reg-xf-Zcj">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Jp-Ap-0S7">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="1mm-eh-fSy" kind="relationship" relationship="rootViewController" id="9F4-ZM-rwb"/>
+                        <segue destination="1mm-eh-fSy" kind="relationship" relationship="rootViewController" id="5wy-wa-xg0"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BZY-w3-nRD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cAm-pJ-e46" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2100" y="377.67857142857139"/>
+            <point key="canvasLocation" x="2100" y="373.66071428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Fdx-fV-GrD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CeH-5e-u7Z" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="TMf-a5-jPs"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Uns-vy-AUH">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="mY0-xx-vdS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o79-Bk-xx4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2100" y="-378.34821428571428"/>
         </scene>
     </scenes>
 </document>
