--- a/Coronavirus/Base.lproj/Main.storyboard
+++ b/Coronavirus/Base.lproj/Main.storyboard
@@ -19,25 +19,39 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ysH-9D-Xhc">
+                                <rect key="frame" x="352" y="751" width="46" height="46"/>
+                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="FtH-8w-3tK"/>
+                                    <constraint firstAttribute="height" constant="46" id="qed-Lg-AfP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="arrow.2.circlepath" catalog="system">
+                                    <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="semibold"/>
+                                </state>
+                                <connections>
+                                    <action selector="reloadAnnotation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ic3-aH-EyC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XdM-4g-ySq" secondAttribute="bottom" id="3gy-aW-G7g"/>
                             <constraint firstItem="XdM-4g-ySq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IzH-gZ-gA0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ysH-9D-Xhc" secondAttribute="trailing" constant="16" id="UbU-59-aji"/>
                             <constraint firstItem="XdM-4g-ySq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="d08-cT-4ZS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ysH-9D-Xhc" secondAttribute="bottom" constant="16" id="fvx-FK-0ch"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XdM-4g-ySq" secondAttribute="trailing" id="sWX-KW-9hP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Confirmed cases" id="l0u-66-eJ8">
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="pCk-wA-6Y9">
-                            <connections>
-                                <action selector="reloadAboutCoronavirus:" destination="BYZ-38-t0r" id="f7U-TU-Qgh"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Confirmed cases" id="l0u-66-eJ8"/>
                     <connections>
                         <outlet property="map" destination="XdM-4g-ySq" id="rvc-BT-tWF"/>
+                        <outlet property="refreshButton" destination="ysH-9D-Xhc" id="cur-T5-chl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -463,6 +477,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.2.circlepath" catalog="system" width="64" height="50"/>
         <image name="info.circle" catalog="system" width="64" height="60"/>
         <image name="map-icon" width="25" height="25"/>
         <image name="news-icon" width="25" height="25"/>
